# kde-networkctl-widget

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  PROJECT_SUMMARY.md  README.md  agent.md  check-system.sh  install-plasmoid-only.sh  install.sh  quick-demo.sh  setup-test-env.sh  simple-demo.sh  test-in-plasma.sh
helper/: CMakeLists.txt  networkctlhelper.cpp  networkctlhelper.h  org.kde.plasma.networkctl.actions  org.kde.plasma.networkctl.policy.in
plasmoid/: CMakeLists.txt  metadata.json
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: InterfaceItem.qml  configGeneral.qml  main.qml
service/: CMakeLists.txt  main.cpp  networkctl-json-wrapper.sh  networkctlservice.cpp  networkctlservice.h  org.kde.plasma.networkctl.service.in  org.kde.plasma.networkctl.xml
